--- a/helm/templates/deployment-vllm-multi.yaml
+++ b/helm/templates/deployment-vllm-multi.yaml
@@ -38,12 +38,10 @@ spec:
           {{- if $container.resources }}
           resources: {{ toYaml $container.resources | nindent 12 }}
           {{- end }}
-          {{- if hasKey $container "mountPvcStorage" }}
+          {{- if and (hasKey $container "mountPvcStorage") (hasKey $modelSpec "pvcStorage") ($container.mountPvcStorage) }}
           volumeMounts:
-          {{- if and $container.volumeMounts.pvcStorage (hasKey $modelSpec "pvcStorage") }}
             - name: {{ .Release.Name }}-storage
               mountPath: /data
-          {{- end }}
           {{- end }}
       {{- end }}
       {{- if .Values.servingEngineSpec.securityContext }}
